--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
-
+@import 'css/nav.css';
 
 body{
     font-family: 'Poppins', sans-serif;
@@ -67,7 +67,7 @@ label{
     color: #383838;
 }
 
-button{
+.container button{
     background: #383838;
     width: 100px;
     border: none;
