--- a/css/nav.css
+++ b/css/nav.css
@@ -31,12 +31,12 @@
     align-items: center;
 }
 
-.search {
+.nav .search {
     width: 500px;
     display: flex;
 }
 
-.search-box{
+.nav .search-box{
     width: 80%;
     height: 40px;
     padding: 10px;
@@ -49,7 +49,7 @@
     outline: none;
 }
 
-.search-btn {
+.nav .search-btn {
     width: 20%;
     height: 40px;
     padding: 10px 20px;
