--- a/css/product.css
+++ b/css/product.css
@@ -9,7 +9,7 @@
     width: 500px;
     height: 500px;
     position: relative;
-    background-image: url(../image/drum.jpg);
+    background-image: url(../image/drums/drum.jpg);
     background-size: cover;
 }
 
