--- a/css/home.css
+++ b/css/home.css
@@ -42,9 +42,10 @@
 
 .product-card{
     flex: 0 0 auto;
-    width: 250px;
-    height: 450px;
+    width: 390px;
+    height: 460px;
     margin-right: 40px;
+    padding: 10px;
 }
 
 .product-image {
@@ -94,7 +95,7 @@
 }
 
 .card-btn :hover{
-    background: #efefef;
+    background: #dcdada;
 }
 
 .product-info {
@@ -115,7 +116,7 @@
     opacity: 0.5;
     text-transform: capitalize;
     margin: 5px 0;
-}
+} 
 
 .price {
     font-weight: 900;
@@ -156,15 +157,15 @@
 }
 .pre-btn:hover img , .nxt-btn:hover img{
     opacity: 1;
-}
+} 
 
 /* collection */
 
 .collection-container {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
 }
 
 .collection {
@@ -189,4 +190,5 @@
     color: #fff;
     font-size: 30px;
     text-transform: capitalize;
-}
+} 
+
